pwt-macros/tests/widget/wrong_comp.stderr
error[E0412]: cannot find type `Wrong` in this scope
  --> tests/widget/wrong_comp.rs:53:26
   |
53 | #[widget(pwt=crate, comp=Wrong, @input, @element)]
   |                          ^^^^^ not found in this scope
